gen/dfareporting/v3.2/cargo-errors.log
    Checking google-dfareporting3d2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/dfareporting/v3.2/lib)
error[E0412]: cannot find type `ListTypeItems` in module `crate::resources::ads::params`
     --> dfareporting/v3.2/lib/src/lib.rs:22442:63
      |
22442 |             r#type: Option<Vec<crate::resources::ads::params::ListTypeItems>>,
      |                                                               ^^^^^^^^^^^^^ not found in `crate::resources::ads::params`

error[E0412]: cannot find type `ListTypeItems` in module `crate::resources::ads::params`
     --> dfareporting/v3.2/lib/src/lib.rs:22543:69
      |
22543 |                 value: impl Into<Vec<crate::resources::ads::params::ListTypeItems>>,
      |                                                                     ^^^^^^^^^^^^^ not found in `crate::resources::ads::params`

error[E0412]: cannot find type `ListTypesItems` in module `crate::resources::creatives::params`
     --> dfareporting/v3.2/lib/src/lib.rs:36095:68
      |
36095 |             types: Option<Vec<crate::resources::creatives::params::ListTypesItems>>,
      |                                                                    ^^^^^^^^^^^^^^ not found in `crate::resources::creatives::params`

error[E0412]: cannot find type `ListTypesItems` in module `crate::resources::creatives::params`
     --> dfareporting/v3.2/lib/src/lib.rs:36189:75
      |
36189 |                 value: impl Into<Vec<crate::resources::creatives::params::ListTypesItems>>,
      |                                                                           ^^^^^^^^^^^^^^ not found in `crate::resources::creatives::params`

error[E0412]: cannot find type `ListEventTagTypesItems` in module `crate::resources::event_tags::params`
     --> dfareporting/v3.2/lib/src/lib.rs:39701:66
      |
39701 |                 Option<Vec<crate::resources::event_tags::params::ListEventTagTypesItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::event_tags::params`

error[E0412]: cannot find type `ListEventTagTypesItems` in module `crate::resources::event_tags::params`
     --> dfareporting/v3.2/lib/src/lib.rs:39743:76
      |
39743 |                 value: impl Into<Vec<crate::resources::event_tags::params::ListEventTagTypesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::event_tags::params`

error[E0412]: cannot find type `ListDirectoriesItems` in module `crate::resources::mobile_apps::params`
     --> dfareporting/v3.2/lib/src/lib.rs:45475:76
      |
45475 |             directories: Option<Vec<crate::resources::mobile_apps::params::ListDirectoriesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::mobile_apps::params`

error[E0412]: cannot find type `ListDirectoriesItems` in module `crate::resources::mobile_apps::params`
     --> dfareporting/v3.2/lib/src/lib.rs:45492:77
      |
45492 |                 value: impl Into<Vec<crate::resources::mobile_apps::params::ListDirectoriesItems>>,
      |                                                                             ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::mobile_apps::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placement_groups::params`
     --> dfareporting/v3.2/lib/src/lib.rs:48609:72
      |
48609 |                 Option<Vec<crate::resources::placement_groups::params::ListPricingTypesItems>>,
      |                                                                        ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placement_groups::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placement_groups::params`
     --> dfareporting/v3.2/lib/src/lib.rs:48699:82
      |
48699 |                 value: impl Into<Vec<crate::resources::placement_groups::params::ListPricingTypesItems>>,
      |                                                                                  ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placement_groups::params`

error[E0412]: cannot find type `GeneratetagsTagFormatsItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.2/lib/src/lib.rs:50782:66
      |
50782 |                 Option<Vec<crate::resources::placements::params::GeneratetagsTagFormatsItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `GeneratetagsTagFormatsItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.2/lib/src/lib.rs:50805:76
      |
50805 |                 value: impl Into<Vec<crate::resources::placements::params::GeneratetagsTagFormatsItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListCompatibilitiesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.2/lib/src/lib.rs:51238:66
      |
51238 |                 Option<Vec<crate::resources::placements::params::ListCompatibilitiesItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.2/lib/src/lib.rs:51251:77
      |
51251 |             pricing_types: Option<Vec<crate::resources::placements::params::ListPricingTypesItems>>,
      |                                                                             ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListCompatibilitiesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.2/lib/src/lib.rs:51284:76
      |
51284 |                 value: impl Into<Vec<crate::resources::placements::params::ListCompatibilitiesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.2/lib/src/lib.rs:51355:76
      |
51355 |                 value: impl Into<Vec<crate::resources::placements::params::ListPricingTypesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-dfareporting3d2`.

To learn more, run the command again with --verbose.
